syntax = "proto3";

package rivet.backend.pkg.game_user.list_for_user;

import "resources/legacy/proto/common.proto";

message Request {
	repeated rivet.common.Uuid user_ids = 1;
}

message Response {
	message User {
		rivet.common.Uuid user_id = 1;
		repeated rivet.common.Uuid game_user_ids = 2;
	}

	repeated User users = 1;
}
